--- a/app/blocks/panelLogin/_panelLogin.sass
+++ b/app/blocks/panelLogin/_panelLogin.sass
@@ -172,6 +172,7 @@
         transform: scale(1) rotate(-45deg)
 
     button
+      cursor: pointer
       //margin-top: 20px
       text-transform: uppercase
       //background: #4AAED4
